style: fixed header menu on mobile

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -5,9 +5,10 @@
   flex-direction: column;
   width: 100%;
   height: 100px;
-
   margin-bottom: 70px;
   border-bottom: 1px solid #eaeaea;
+  z-index: 10;
+  /* position: fixed; */
 }
 
 .header nav {
@@ -17,6 +18,8 @@
 
   width: 100%;
   height: 100%;
+
+  background-color: white;
 }
 
 .controlNavCheckbox {
@@ -30,13 +33,12 @@
 
   width: 124px;
   height: 100%;
-
   transition: 0.1s;
   font-size: 1rem;
 }
 
 .header a:hover {
-  background-color: #999999;
+  background-color: rgb(142, 142, 142);
   color: white;
 }
 
@@ -56,6 +58,7 @@
 @media screen and (max-width: 767px) {
   .header {
     height: auto;
+    position: fixed;
   }
 
   .header .controlNav {
@@ -73,6 +76,8 @@
 
     z-index: 2;
     cursor: pointer;
+
+    backdrop-filter: blur(20px);
   }
 
   .header .controlNav:before {
@@ -80,6 +85,7 @@
     display: block;
     height: 3px;
     background: #333;
+
   }
 
   .header .controlNavClose {
@@ -91,9 +97,8 @@
 
     display: block;
     z-index: 1;
-
     background: rgba(0, 0, 0, 0.1);
-    /* transition: all 300ms linear; */
+    transition: all 300ms linear;
 
     transform: translate(100%, 0);
   }
@@ -108,7 +113,10 @@
 
     width: 200px;
     border-left: 1px solid #ccc;
-    background: #fff;
+    background-color: #fff;
+    opacity: 0.94;
+
+    /* backdrop-filter: blur(8px); */
 
     overflow-x: auto;
     z-index: 2;
@@ -130,5 +138,9 @@
 
     text-align: left;
     font-size: 1rem;
+  }
+
+  .header a:last-child {
+    border-bottom: none;
   }
 }
